kubernetes/entrenapp/front/02-entrenapp-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-entrenapp-service
  namespace: entrenapp
spec:
  selector:
    app: front-entrenapp
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
